--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,16 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>General Ledger</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/Logo.png" alt="I'm Yeoman"><br>
+    Your dreams. Our design.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-raised btn-primary" ng-href="#/">Get Started!</a></p>
 </div>
 
 <div class="row marketing">
   <h4>HTML5 Boilerplate</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    <i class="material-icons">face</i>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
   </p>
 
   <h4>Angular</h4>
